# 2dclock

./: CMakeLists.txt
src/: main.cpp
